# rustpickle

./: .gitignore  Cargo.toml  LICENSE  README.md  test
src/: lib.rs  main.rs  rustpickle.rs
tests/: rustpickle_tests.rs
