[package]
name = "rustpickle"
version = "0.1.0"
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustpickle"
path = "src/lib.rs"

[[bin]]
name = "rustpickle_bin"
path = "src/main.rs"

[dependencies]
